samples/_failures_safe/1761445779_30dd3d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d95328c9.c: In function ‘main’:
./samples/SAFE/__tmp_d95328c9.c:156:5: error: expected declaration or statement at end of input
  156 |     return 0;
      |     ^~~~~~
